--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -401,8 +401,8 @@ img{
     margin: 0;
   }
   .section{
-    padding-top: 4rem;
-    padding-bottom: 3rem;
+  /*   padding-top: 4rem;
+    padding-bottom: 3rem; */
   }
   .section-title{
     margin-bottom: var(--mb-6);
