--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -295,16 +295,16 @@ img{
   width: 90%;
 }
 .skills__css{
-  width: 85%;
+  width: 90%;
 }
 .skills__js{
-  width: 80%;
+  width: 90%;
 }
 .skills__ux{
-  width: 75%;
+  width: 65%;
 }
 .skills__java{
-  width: 70%;
+  width: 55%;
 }
 .skills__word{
   width: 74%;
@@ -315,7 +315,12 @@ img{
 .skills__img{
   border-radius: .5rem;
 }
-
+.skills__c{
+  width: 83%;
+}
+.skills__JQ{
+  width: 86%;
+}
 /* ===== WORK =====*/
 .work__container{
   row-gap: 2rem;
